<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Timer</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>

    <!-- nps -->
    <string name="nps">Thank you for using Quick Timer. Please cooperate with the following questionnaire.\n\n<b><i>How likely is it that you would recommend Quick Timer to a friend or colleague?</i></b></string>
    <string name="nps_zero">0=Not at all likely</string>
    <string name="nps_ten">10=Extrimely likely</string>
    <string name="nps_comment">(Optional)<b><i> Please tell the reasons, or opinion about the application.</i></b></string>

    <!-- カウントダウン画面 -->
    <string name="restart">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Cancel</string>
    <string name="stop_confirm_message">Do you want to cancel??</string>
    <string name="finish">Finish</string>

    <!-- 通知 -->
    <string name="notification_open_app">Open Quick Timer</string>
    <string name="notification_open_app_setting">You can hide this by the setting</string>
    <string name="notification_set_timer">Set the timer</string>

    <!-- 設定画面 -->
    <string name="version">App Version</string>
    <string name="notification_launcher_id">notification_launcher</string>
    <string name="notification_launcher_title">Notification Launcher</string>
    <string name="notification_launcher_summary">You can open this app from the notification</string>
    <string name="notification_method_title">How to notify</string>
    <string name="notification_length">Notify length</string>
    <string name="request">Send your opinion</string>
    <string name="question">Frequently asked questions</string>
    <string name="google_play">Open Google Play</string>

    <!-- レビューお願い -->
    <string name="please_review_message">This app is good?</string>
    <string name="please_review_good">good</string>
    <string name="please_review_yet">don\'t know yet</string>
    <string name="please_review_bad">bat</string>
    <string name="please_review_google_play">Thank you! Please review in Google Play :)</string>
    <string name="please_review_send_your_opinion">Please send your opinion. We\'ll do our best!!</string>

    <!-- 要望画面 -->
    <string name="request_hint">Please write here</string>
    <string name="request_empty">Oops, no contents</string>
    <string name="request_thanks">Thanks!!</string>
    <string name="request_send">send</string>
    <string name="request_cancel">cancel</string>

    <!-- バージョンアップ文言 -->
    <string name="versionup_notification_ticker">Quick Timer has been updated</string>
    <string name="versionup_notification_title">New features have been added.</string>
    <string name="versionup_notification_message">Please make sure to tap here</string>
    <string name="versionup_dialog_title">You can now choose the vibration and/or sound</string>
    <string name="versionup_dialog_message">It is possible to change from the configuration screen that appears when you press the spanner mark at the top right of the screen.</string>

</resources>