<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/requestText"
            android:hint="@string/request_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="10"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_send"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_cancel"
            />

    </LinearLayout>
</ScrollView>